--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,10 @@
 
-
 Copyright (C) 2013 Daniel Pocock http://danielpocock.com
+and distributed under a GPLv2 license (see COPYING for details)
 
 Based on SIPml5, Copyright (C) 2012-2013 Doubango Telecom
+and distributed under the terms of a BSD license
 
-Licensed under the GPL v3.0
+
 
 
